added initial functionality

--- a/Web/OnlineBookshop.Web/Views/Home/Index.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Home/Index.cshtml
@@ -3,7 +3,30 @@
     this.ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <main class="main-content-wrapper">
+        <section class="empty-space"></section>
+        <section class="banner">
+            <h1>All the books you need in one place</h1>
+        </section>
+        <section class="empty-space"></section>
+        <section class="information">
+            <h2>Lorem Ipsum</h2>
+            <p>
+                Vivamus id nisi leo. Vivamus iaculis non arcu ut tincidunt. Duis malesuada odio at nunc luctus, at
+                vestibulum urna semper. Praesent ut augue lobortis urna mattis blandit vel a libero. Integer id nunc
+                nisi. Ut ac massa facilisis, porttitor dui et, blandit velit. Vestibulum id felis est. Cras dapibus
+                rutrum pellentesque. Etiam vitae urna non enim dapibus commodo. Vestibulum sed odio id eros eleifend
+                eleifend. Duis eget arcu eget orci auctor luctus.
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo sem. Nullam quis eros tortor.
+                Nullam sit amet tellus semper, ultricies mi ut, vestibulum lorem. Morbi fringilla lorem quis sagittis
+                auctor. Nulla pretium eget magna non consectetur. Quisque efficitur mattis volutpat. Maecenas justo
+                ligula, blandit at nisi non, fringilla elementum nisl. Vestibulum vitae egestas metus, ut rhoncus ante.
+                Praesent euismod hendrerit ligula. Nulla consectetur turpis eget risus fringilla, viverra vestibulum
+                velit aliquam. Aliquam consequat sit amet sem vel blandit. Duis vestibulum sit amet tortor id cursus.
+                Cras lobortis imperdiet imperdiet. Nunc accumsan commodo neque vel pulvinar. In hac habitasse platea
+                dictumst.
+            </p>
+        </section>
+        <section class="empty-space"></section>
+    </main>
