--- a/Web/OnlineBookshop.Web/wwwroot/css/site.css
+++ b/Web/OnlineBookshop.Web/wwwroot/css/site.css
@@ -1,2 +1,5 @@
 ﻿@import url(home.css);
 @import url(layout.css);
+@import url(new-book.css);
+@import url(register.css);
+@import url(catalog.css);
