--- a/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
 ﻿@using OnlineBookshop.Common
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor Accessor
+
+@{
+    var currentPage = Accessor.HttpContext.Request.Path.Value;
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,33 +24,41 @@
         <section class="navigation-wrapper">
             <nav class="site-navigation">
                 <ul class="navigation-items">
-                    <li class="navigation-item"><a asp-controller="Home" asp-action="Index" asp-area="">Home</a></li>
-                    @* @if (User.Identity.IsAuthenticated)
-                        {*@
-                    <li class="navigation-item"><a asp-controller="Catalog" asp-action="Catalog">Catalog</a></li>
-                    <li class="navigation-item"><a asp-controller="Book" asp-action="NewBook">Add Book</a></li>
-                    @*<a href="#news">News</a>*@
-                   @* <li class="navigation-item">
-                        <a href="#0">Widgets</a>
-                        <ol class="sub-menu">
-                            <li class="menu-item"><a href="#0">Big Widgets</a></li>
-                            <li class="menu-item"><a href="#0">Bigger Widgets</a></li>
-                            <li class="menu-item"><a href="#0">Huge Widgets</a></li>
-                        </ol>
-                    </li>*@
-                    @*}*@
+                    <li class="navigation-item @(currentPage == "/" ? "active" : "")"><a asp-controller="Home" asp-action="Index" asp-area="">Home</a></li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="navigation-item @(currentPage == "/Catalog/Catalog" ? "active" : "")"><a asp-controller="Catalog" asp-action="Catalog">Catalog</a></li>
+                        <li class="navigation-item @(currentPage == "/" ? "active" : "")">
+                            <div class="dropdown">
+                                <button class="dropbtn">Menu</button>
+                                <div class="dropdown-content">
+                                    @if (User.IsInRole("Administrator"))
+                                    {
+                                        <a class="border-top-left-right" asp-controller="Book" asp-action="NewBook">Add Book</a>
+                                        @*<a asp-controller="Book" asp-action="NewBook">Add Genre</a>*@
+                                        <a class="border-bottom-left-right" asp-controller="Book" asp-action="NewBook">Add Author</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="border-top-left-right" asp-controller="Book" asp-action="NewBook">Bookshelf</a>
+                                        <a class="border-bottom-left-right" asp-controller="Book" asp-action="NewBook">Wishlist</a>
+                                    }
+                                </div>
+                            </div>
+                        </li>
+                    }
                 </ul>
             </nav>
             <section class="user-login-signin-cart">
                 @if (User.Identity.IsAuthenticated)
                 {
+                    <img class="shopping-cart" src="~/images/shopping.png">
+                    <a class="log-out" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">Logout</a>
                 }
                 else
                 {
-                    <button class="log-out" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@this.Url.Action("Index", "Home", new { area = string.Empty })">Logout</button>
-                    <button class="register" asp-area="Identity" asp-page="/Account/Register">Register</button>
-                    <button class="log-in" asp-area="Identity" asp-page="/Account/Login">Log in</button>
-                    <img class="shopping-cart" src="~/images/shopping.png">
+                    <a class="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                    <a class="log-in" asp-area="Identity" asp-page="/Account/Login">Log in</a>
                 }
             </section>
         </section>
