--- a/Web/OnlineBookshop.Web/wwwroot/css/layout.css
+++ b/Web/OnlineBookshop.Web/wwwroot/css/layout.css
@@ -96,6 +96,7 @@ body {
 
 .shopping-cart {
     max-height: 40px;
+    margin-right: 1.5em;
 }
 
 .navigation-wrapper {
@@ -114,38 +115,42 @@ body {
 }
 
 .navigation-items .navigation-item {
-    margin: 15px;
+    margin: 10px;
     border-radius: 5px;
     padding: 12px 18px;
 }
 
-    .navigation-items .navigation-item:nth-child(1) {
-        background-color: #E8AA8C;
+.navigation-item.active {
+    background-color: #E8AA8C;
+}
+
+    .navigation-item.active a {
+        color: white !important;
     }
 
-        .navigation-items .navigation-item:nth-child(1) a {
-            color: white;
-        }
-
-    .navigation-items .navigation-item a {
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 18px;
-        color: #E8AA8C;
+    .navigation-item.active button {
+        color: white !important;
     }
 
-    .navigation-items .navigation-item:hover {
-        background-color: #006d77;
-        cursor: pointer;
+.navigation-items .navigation-item a {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+    color: #E8AA8C;
+}
+
+.navigation-items .navigation-item:hover {
+    background-color: #006d77;
+    cursor: pointer;
+}
+
+    .navigation-items .navigation-item:hover a {
+        color: white;
     }
 
-        .navigation-items .navigation-item:hover a {
-            color: white;
-        }
-
-    .navigation-items .navigation-item:nth-child(1):hover {
-        background-color: #e5b49b;
-    }
+.navigation-items .navigation-item:nth-child(1):hover {
+    background-color: #e5b49b;
+}
 
 /* SignUp/LogIn button */
 
@@ -180,7 +185,6 @@ body {
 }
 
     .log-in:hover, .register:hover, log-out:hover {
-        background-color: #006d77;
         cursor: pointer;
         box-sizing: 20px 2px 10px 7px white;
         display: inline-block;
@@ -189,6 +193,11 @@ body {
         transform: perspective(1px) translateZ(0);
         /*box-shadow: 0 0 1px rgb(0 0 0);*/
     }
+
+a.register, a.log-in, a.log-out {
+    color: white !important;
+    text-decoration: none;
+}
 
 /* Float */
 
@@ -302,3 +311,62 @@ a.button {
     a.button:active {
         filter: brightness(75%);
     }
+
+/* Dropdown Button */
+.dropbtn {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+    color: #E8AA8C;
+    background: none;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    min-width: 160px;
+    border-radius: 10px;
+    background: white;
+}
+
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: gray !important;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+        /* Change color of dropdown links on hover */
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    color: white;
+    border-radius: 10px;
+}
+
+.border-bottom-left-right {
+    border-radius: 0 0 10px 10px;
+}
+
+.border-top-left-right {
+    border-radius: 10px 10px 0 0;
+}
