--- a/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
@@ -1,5 +1,5 @@
-﻿@model List<OnlineBookshop.Data.Models.Book>;
-@using OnlineBookshop.Common
+﻿@model OnlineBookshop.Web.ViewModels.ViewModels.BookForCategoriesViewModel;
+@using OnlineBookshop.Common;
 @{
     this.ViewData["Title"] = "Catalog";
 }
@@ -8,114 +8,42 @@
     <div>
         <div class="categories-wrapper">
             <div class="categories-left-section">
-                <div>
-                    <form class="form-search-box">
-                        <input id="search" type="search" placeholder="Author, Book" pattern=".*\S.*" required>
+                <form class="form-search-box">
+                    <div class="d-flex">
+                        <input asp-for="InputModel.AuthorBookTitle" id="search" type="search" name="authorBookTitle" placeholder="Author, Book" pattern=".*\S.*">
                         <span class="caret"></span>
                         <input type="submit" value="Go" class="search-button">
-                    </form>
-                </div>
-                <fieldset class="checkbox-group">
-                    <legend class="checkbox-group-legend">Choose book genres</legend>
-                    <div class="checkbox">
-                        <label class="checkbox-wrapper">
-                            <input type="checkbox" class="checkbox-input" />
-                            <span class="checkbox-tile">
-                                <span class="checkbox-icon">
-                                    <img class="categories-icons" src="~/images/castle.png" alt="horror">
-                                </span>
-                                <span class="checkbox-label">Horror</span>
-                            </span>
-                        </label>
                     </div>
-                    <div class="checkbox">
-                        <label class="checkbox-wrapper">
-                            <input type="checkbox" class="checkbox-input" />
-                            <span class="checkbox-tile">
-                                <span class="checkbox-icon">
-                                    <img class="categories-icons" src="~/images/hearts.png" alt="romance">
-                                </span>
-                                <span class="checkbox-label">Romance</span>
-                            </span>
-                        </label>
+                    <div class="form-field">
+                        <fieldset class="checkbox-group">
+                            <legend class="checkbox-group-legend">Choose book genres</legend>
+                            @foreach (var genre in Model.Genres)
+                            {
+                                <div class="checkbox">
+                                    <label class="checkbox-wrapper">
+                                        <input name="GenreIds" value="@genre.Id" checked="@Model.InputModel.GenreIds?.Contains(genre.Id)" type="checkbox" class="checkbox-input" />
+                                        <span class="checkbox-tile">
+                                            <span class="checkbox-icon">
+                                                <img class="categories-icons" src="@genre.Picture" alt="horror">
+                                            </span>
+                                            <span class="checkbox-label">@genre.Name</span>
+                                        </span>
+                                    </label>
+                                </div>
+                            }
+                        </fieldset>
                     </div>
-                    <div class="checkbox">
-                        <label class="checkbox-wrapper">
-                            <input type="checkbox" class="checkbox-input" />
-                            <span class="checkbox-tile">
-                                <span class="checkbox-icon">
-                                    <img class="categories-icons" src="~/images/dragon.png" alt="fantasy">
-                                </span>
-                                <span class="checkbox-label">Fantasy</span>
-                            </span>
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label class="checkbox-wrapper">
-                            <input type="checkbox" class="checkbox-input" />
-                            <span class="checkbox-tile">
-                                <span class="checkbox-icon">
-                                    <img class="categories-icons" src="~/images/star.png" alt="western">
-                                </span>
-                                <span class="checkbox-label">Western</span>
-                            </span>
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label class="checkbox-wrapper">
-                            <input type="checkbox" class="checkbox-input" />
-                            <span class="checkbox-tile">
-                                <span class="checkbox-icon">
-                                    <img class="categories-icons" src="~/images/investigation.png" alt="detective">
-                                </span>
-                                <span class="checkbox-label">Detective</span>
-                            </span>
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label class="checkbox-wrapper">
-                            <input type="checkbox" class="checkbox-input" />
-                            <span class="checkbox-tile">
-                                <span class="checkbox-icon">
-                                    <img class="categories-icons" src="~/images/museum.png" alt="historical">
-                                </span>
-                                <span class="checkbox-label">Historical</span>
-                            </span>
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label class="checkbox-wrapper">
-                            <input type="checkbox" class="checkbox-input" />
-                            <span class="checkbox-tile">
-                                <span class="checkbox-icon">
-                                    <img class="categories-icons" src="~/images/abduction.png" alt="sci-fi">
-                                </span>
-                                <span class="checkbox-label">Sci-Fi</span>
-                            </span>
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label class="checkbox-wrapper">
-                            <input type="checkbox" class="checkbox-input" />
-                            <span class="checkbox-tile">
-                                <span class="checkbox-icon">
-                                    <img class="categories-icons" src="~/images/chick.png" alt="chickflick">
-                                </span>
-                                <span class="checkbox-label">Chickflick</span>
-                            </span>
-                        </label>
-                    </div>
-                </fieldset>
+                </form>
             </div>
 
             <div class="categroies-right-section">
-                @foreach (var book in Model)
+                @foreach (var book in Model.Books)
                 {
                     <div class="book-info-summary">
-                        <img src="@book.Cover" class="book-cover" alt="cover">
+                        <img src="@book.CoverUrl" class="book-cover" alt="cover">
                         <div class="book-short-info">
                             <div class="book-title">@book.Title</div>
-                            <div class="book-author">@string.Join(", ", book.Authors.Select(a => $"{a.Author.FirstName} {a.Author.LastName}"))</div>
+                            <div class="book-author">@string.Join(", ", book.Authors.Select(a => $"{a.FirstName} {a.LastName}"))</div>
                             <div class="book-price">$@book.Price</div>
                         </div>
                     </div>
