--- a/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
@@ -32,17 +32,17 @@
                             <div class="dropdown">
                                 <button class="dropbtn">Menu</button>
                                 <div class="dropdown-content">
-                                    @if (User.IsInRole("Administrator"))
-                                    {
+                                    @*@if (User.IsInRole("Administrator"))
+                                    {*@
                                         <a class="border-top-left-right" asp-controller="Book" asp-action="NewBook">Add Book</a>
                                         @*<a asp-controller="Book" asp-action="NewBook">Add Genre</a>*@
                                         <a class="border-bottom-left-right" asp-controller="Book" asp-action="NewBook">Add Author</a>
-                                    }
-                                    else
-                                    {
+                                   @* }
+                                    else*@
+                                    @*{*@
                                         <a class="border-top-left-right" asp-controller="Book" asp-action="NewBook">Bookshelf</a>
                                         <a class="border-bottom-left-right" asp-controller="Book" asp-action="NewBook">Wishlist</a>
-                                    }
+                                    @*}*@
                                 </div>
                             </div>
                         </li>
