--- a/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                     else*@
                                     @*{*@
                                         <a class="border-top-left-right" asp-controller="Book" asp-action="NewBook">Bookshelf</a>
-                                        <a class="border-bottom-left-right" asp-controller="Book" asp-action="NewBook">Wishlist</a>
+                                        <a class="border-bottom-left-right" asp-controller="Catalog" asp-action="GetFavoriteBooksCatalog">Wishlist</a>
                                     @*}*@
                                 </div>
                             </div>
