added user book cart

--- a/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
@@ -25,7 +25,7 @@
                                         <input name="GenreIds" value="@genre.Id" checked="@Model.InputModel.GenreIds?.Contains(genre.Id)" type="checkbox" class="checkbox-input" />
                                         <span class="checkbox-tile">
                                             <span class="checkbox-icon">
-                                                <img class="categories-icons" src="@genre.Picture" alt="horror">
+                                                <img class="categories-icons" src="@genre.Picture" alt="@genre.Name">
                                             </span>
                                             <span class="checkbox-label">@genre.Name</span>
                                         </span>
@@ -50,8 +50,10 @@
                             <button type="button" class="edit-book-button" onclick="document.getElementById('edit-@book.Id').click()">Edit</button>
                             <a hidden="hidden" id="remove-@book.Id" type="button" class="delete-book-button-link" asp-controller="Book" asp-action="DeleteBook" asp-route-id="@book.Id">Delete</a>
                             <button type="button" class="delete-book-button" onclick="document.getElementById('remove-@book.Id').click()">Delete</button>
-                             <a hidden="hidden" id="tofavorites-@book.Id" type="button" class="add-book-to-favorites-button-link" asp-controller="Book" asp-action="AddBookToFavorites" asp-route-bookId="@book.Id">Add To Favorites</a>
+                            <a hidden="hidden" id="tofavorites-@book.Id" type="button" class="add-book-to-favorites-button-link" asp-controller="Book" asp-action="AddBookToFavorites" asp-route-bookId="@book.Id">Add To Favorites</a>
                             <button type="button" class="add-book-to-favorites-button" onclick="document.getElementById('tofavorites-@book.Id').click()">Add To Favorites</button>
+                            <a hidden="hidden" id="add-book-to-cart-@book.Id" type="button" class="add-book-to-cart-button-link" asp-controller="Book" asp-action="AddBookToCart" asp-route-bookId="@book.Id">Add To Cart</a>
+                            <button type="button" class="add-book-to-cart-button" onclick="document.getElementById('add-book-to-cart-@book.Id').click()">Add To Cart</button>
                         </div>
                     </div>
                 }
