--- a/Web/OnlineBookshop.Web/Views/Book/EditBook.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Book/EditBook.cshtml
@@ -86,7 +86,9 @@
         </select>
     </div>
     <div class="form-field">
-        <input type="submit" value="Add">
+        <input type="submit" value="Save Changes">
+        <input type="submit" value="Refresh Data"> @*TODO: make this work*@
+        <input type="submit" value="Cancel"> @*TODO: make this work*@
     </div>
 </form>
 
