--- a/Web/OnlineBookshop.Web/Views/Catalog/GetBookshelfCatalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/GetBookshelfCatalog.cshtml
@@ -1,7 +1,7 @@
-﻿@model OnlineBookshop.Web.ViewModels.ViewModels.BookForCategoriesViewModel;
+﻿@model OnlineBookshop.Web.ViewModels.ViewModels.BookForBookshelfViewModel;
 @using OnlineBookshop.Common;
 @{
-    this.ViewData["Title"] = "Cart";
+    this.ViewData["Title"] = "Bookshelf";
 }
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,16 +46,11 @@
                             <div class="book-title">@book.Title</div>
                             <div class="book-author">@string.Join(", ", book.Authors.Select(a => $"{a.FirstName} {a.LastName}"))</div>
                             <div class="book-price">$@book.Price</div>
-                            <a hidden="hidden" id="remove-from-cart-@book.Id" type="button" class="remove-from-cart-link" asp-controller="Book" asp-action="RemoveBookFromCart" asp-route-bookId="@book.Id">Remove</a>
-                            <button type="button" class="remove-from-cart" onclick="document.getElementById('remove-from-cart-@book.Id').click()">Remove</button>
+                            <a hidden="hidden" id="read-@book.Id" type="button" class="read-book-button-link" asp-controller="Book" asp-action="ReadBook" asp-route-bookId="@book.Id">Read</a>
+                            <button type="button" class="read-book-button" onclick="document.getElementById('read-@book.Id').click()">Read</button>
                         </div>
                     </div>
                 }
-            </div>
-
-            <div class="form-field">
-                <a hidden="hidden" id="buy-books" type="button" class="buy-books-in-cart-link" asp-controller="Book" asp-action="BuyBooksInCart">Buy Books</a>
-                <button type="button" class="buy-books-in-cart" onclick="document.getElementById('buy-books').click()">Buy Books</button>
             </div>
         </div>
     </div>
