--- a/Web/OnlineBookshop.Web/wwwroot/css/catalog.css
+++ b/Web/OnlineBookshop.Web/wwwroot/css/catalog.css
@@ -229,7 +229,9 @@ body {
 }
 
 /* Style edit button */
-.edit-book-button, .delete-book-button, .add-book-to-favorites-button, .remove-book-from-favorites-button, .add-book-to-cart-button, .remove-from-cart {
+.edit-book-button, .delete-book-button, .add-book-to-favorites-button,
+.remove-book-from-favorites-button, .add-book-to-cart-button, .remove-from-cart,
+.buy-books-in-cart {
     border: none; /* Remove borders */
     color: white; /* White text */
     padding: 10px 14px; /* Some padding */
@@ -261,4 +263,12 @@ body {
 
 .delete-book-button:hover, .remove-book-from-favorites-button:hover, .remove-from-cart:hover {
     background-color: orangered
+}
+
+.buy-books-in-cart {
+    background-color: darkgoldenrod;
+}
+
+.buy-books-in-cart:hover {
+    background-color: darkorange;
 }
