UI modifications for improvement

--- a/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/Catalog.cshtml
@@ -51,17 +51,27 @@
                         <div class="book-info-summary">
                             <img src="@book.CoverUrl" class="book-cover" alt="cover">
                             <div class="book-short-info">
-                                <div class="book-title">@book.Title</div>
-                                <div class="book-author">@string.Join(", ", book.Authors.Select(a => $"{a.FirstName} {a.LastName}"))</div>
-                                <div class="book-price">$@book.Price</div>
-                                <a hidden="hidden" id="edit-@book.Id" type="button" class="edit-book-button-link" asp-controller="Book" asp-action="EditBook" asp-route-bookId="@book.Id">Edit</a>
-                                <button type="button" class="edit-book-button" onclick="document.getElementById('edit-@book.Id').click()">Edit</button>
-                                <a hidden="hidden" id="remove-@book.Id" type="button" class="delete-book-button-link" asp-controller="Book" asp-action="DeleteBook" asp-route-id="@book.Id">Delete</a>
-                                <button type="button" class="delete-book-button" onclick="document.getElementById('remove-@book.Id').click()">Delete</button>
-                                <a hidden="hidden" id="tofavorites-@book.Id" type="button" class="add-book-to-favorites-button-link" asp-controller="Book" asp-action="AddBookToFavorites" asp-route-bookId="@book.Id">Add To Favorites</a>
-                                <button type="button" class="add-book-to-favorites-button" onclick="document.getElementById('tofavorites-@book.Id').click()">Add To Favorites</button>
-                                <a hidden="hidden" id="add-book-to-cart-@book.Id" type="button" class="add-book-to-cart-button-link" asp-controller="Book" asp-action="AddBookToCart" asp-route-bookId="@book.Id">Add To Cart</a>
-                                <button type="button" class="add-book-to-cart-button" onclick="document.getElementById('add-book-to-cart-@book.Id').click()">Add To Cart</button>
+                                <div>
+                                    <div class="book-title">@book.Title</div>
+                                    <div class="book-author">@string.Join(", ", book.Authors.Select(a => $"{a.FirstName} {a.LastName}"))</div>
+                                    <div class="book-price">$@book.Price</div>
+                                </div>
+                                <div>
+                                @if (User.IsInRole("Administrator"))
+                                {
+                                    <a hidden="hidden" id="edit-@book.Id" type="button" class="edit-book-button-link" asp-controller="Book" asp-action="EditBook" asp-route-bookId="@book.Id">Edit</a>
+                                    <button type="button" class="edit-book-button" onclick="document.getElementById('edit-@book.Id').click()"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+                                    <a hidden="hidden" id="remove-@book.Id" type="button" class="delete-book-button-link" asp-controller="Book" asp-action="DeleteBook" asp-route-id="@book.Id">Delete</a>
+                                    <button type="button" class="delete-book-button" onclick="document.getElementById('remove-@book.Id').click()"><i class="fa-solid fa-trash"></i></button>
+                                }
+                                else
+                                {
+                                    <a hidden="hidden" id="tofavorites-@book.Id" type="button" class="add-book-to-favorites-button-link" asp-controller="Book" asp-action="AddBookToFavorites" asp-route-bookId="@book.Id">Add To Favorites</a>
+                                    <button type="button" class="add-book-to-favorites-button" onclick="document.getElementById('tofavorites-@book.Id').click()"><i class="fa fa-heart" aria-hidden="true"></i></button>
+                                    <a hidden="hidden" id="add-book-to-cart-@book.Id" type="button" class="add-book-to-cart-button-link" asp-controller="Book" asp-action="AddBookToCart" asp-route-bookId="@book.Id">Add To Cart</a>
+                                    <button type="button" class="add-book-to-cart-button" onclick="document.getElementById('add-book-to-cart-@book.Id').click()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
+                                }
+                                </div>
                             </div>
                         </div>
                     }
