--- a/Web/OnlineBookshop.Web/Views/Book/EditBook.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Book/EditBook.cshtml
@@ -86,9 +86,9 @@
         </select>
     </div>
     <div class="form-field">
-        <input type="submit" value="Save Changes">
-        <input type="submit" value="Refresh Data"> @*TODO: make this work*@
-        <input type="submit" value="Cancel"> @*TODO: make this work*@
+        <input type="submit" class="mb-3 hover-effect" value="Save Changes">
+        <input type="submit" class="mb-3 hover-effect" value="Refresh Data"> @*TODO: make this work*@
+        <input type="submit" class="mb-3 hover-effect" value="Cancel"> @*TODO: make this work*@
     </div>
 </form>
 
