--- a/Web/OnlineBookshop.Web/wwwroot/css/catalog.css
+++ b/Web/OnlineBookshop.Web/wwwroot/css/catalog.css
@@ -182,7 +182,7 @@ body {
     width: 200px;
     object-fit: cover;
     border-radius: 1.5em 0 0 1em;
-    height: 300px;
+    height: 100%;
 }
 
 .book-info-summary {
@@ -202,7 +202,7 @@ body {
 
 .book-author {
     color: #555;
-    margin: 1em 0 8em 0;
+    margin-top: 1em;
 }
 
 .book-price {
@@ -214,6 +214,10 @@ body {
 .book-short-info {
     margin: 1em;
     width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 325px;
 }
 
 .categories-right-section {
